사진 업로드, 신청서 제출 구현

--- a/개발 가이드 문서.md
+++ b/개발 가이드 문서.md
@@ -43,3 +43,15 @@
 - `npm run build`로 프로젝트 빌드
 - `firebase deploy`로 Firebase Hosting에 배포
 - 배포된 URL을 기반으로 QR 코드 생성 및 전달
+
+## 4. Firestore 데이터베이스 구조
+
+### `applications` 컬렉션
+- **설명:** 사용자가 제출한 동아리 참가 신청서를 저장합니다.
+- **필드:**
+  - `studentId` (string): 학번
+  - `name` (string): 이름
+  - `contact` (string): 연락처
+  - `hasSmartwatch` (boolean): 스마트워치 보유 여부
+  - `submittedAt` (timestamp): 신청서 제출 시간
+- **보안 규칙:** 누구나 신청서를 제출(create)할 수 있으나, 다른 사람의 신청서를 읽거나 수정/삭제하는 것은 불가능합니다. (`allow create: if true;`)
